[project]
name = "TFDWT"
version = "0.2"
authors = [
  { name="Kishore Kumar Tarafdar", email="kishorektarafdar@gmail.com" },
]
description = "Fast Discrete Wavelet Transform TensorFlow Layers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL v3 License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/kkt-ee/TFDWT"
Issues = "https://github.com/kkt-ee/TFDWT/issues"